# canon

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPER.md  LICENSE  MODE_GUIDE.md  NEXT_FEATURES.md  README.md  ROADMAP.md  SECURITY.md  StartupProfileData-NonInteractive  TEST_PLAN.md  deny.toml  fix-test-artifacts.sh  input.txt  package-lock.json  package.json  rust-toolchain.toml  rustfmt.toml  sonar-project.properties  update_log.patch
crates/canon-cli/: Cargo.toml
crates/canon-cli/src/: app.rs  commands.rs  error.rs  main.rs  output.rs  tui.rs  workspace.rs
crates/canon-cli/src/commands/: approve.rs  governance.rs  help_next.rs  init.rs  inspect.rs  list.rs  mod.rs  observability_design.rs  policy_shaping.rs  pr_review.rs  publish.rs  resume.rs  run.rs  skills.rs  status.rs  verify.rs
crates/canon-cli/src/commands/governance/: error.rs  handlers.rs  parsers.rs  paths.rs  projection.rs  protocol.rs  status.rs  tests.rs
crates/canon-cli/src/output/: dispatch.rs  early_signal.rs  inspect.rs  primitives.rs  run.rs
crates/canon-cli/src/tui/: init.rs  mod.rs  render.rs  terminal.rs
crates/canon-cli/tests/integration/: test_policy_shaping.rs
crates/canon-engine/: Cargo.toml
crates/canon-engine/src/: artifacts.rs  domain.rs  lib.rs  modes.rs  orchestrator.rs  persistence.rs  review.rs
crates/canon-engine/src/artifacts/: contract.rs  json.rs  manifest.rs  markdown.rs  mod.rs  option_map.rs  yaml.rs
crates/canon-engine/src/artifacts/contract/: analysis.rs  authoring.rs  delivery.rs  domain.rs  governance.rs  operations.rs  sections.rs
crates/canon-engine/src/artifacts/markdown/: analysis.rs  architecture.rs  authoring.rs  delivery.rs  domain.rs  governance.rs  shared.rs
crates/canon-engine/src/domain/: approval.rs  artifact.rs  decision.rs  execution.rs  gate.rs  help_next.rs  method.rs  mod.rs  mode.rs  policy.rs  publish_profile.rs  review.rs  review_coverage.rs  run.rs  verification.rs
crates/canon-engine/src/domain/publish_profile/: authority.rs  publication.rs  semantic.rs
crates/canon-engine/src/modes/: architecture.rs  backlog.rs  brainstorming.rs  brownfield_change.rs  change.rs  debugging.rs  discovery.rs  greenfield.rs  implementation.rs  incident.rs  migration.rs  pr_review.rs  refactor.rs  requirements.rs  review.rs  system_shaping.rs  verification.rs
crates/canon-engine/src/observability/: evaluator.rs  generators.rs  mod.rs
crates/canon-engine/src/orchestrator/: classifier.rs  evidence.rs  gatekeeper.rs  invocation.rs  mod.rs  publish.rs  resume.rs  service.rs  verification_runner.rs
crates/canon-engine/src/orchestrator/gatekeeper/: context.rs  entrypoints.rs  rules.rs  tests.rs
crates/canon-engine/src/orchestrator/publish/: adr.rs  metadata.rs  policy.rs  support.rs  surface.rs  tests.rs
crates/canon-engine/src/orchestrator/service/: authoring_workflow.rs  patch.rs  (+36 more)
crates/canon-engine/src/persistence/: atomic.rs  invocations.rs  layout.rs  lookup.rs  manifests.rs  mod.rs  slug.rs  store.rs  traces.rs
crates/canon-engine/src/policy/: diff.rs  evaluator.rs  migration.rs  mod.rs  models.rs  report.rs
crates/canon-engine/src/review/: classifier.rs  context.rs  coverage.rs  critique.rs  diff.rs  evaluator.rs  findings.rs  generators.rs  mod.rs  onion.rs  render.rs  summary.rs  validate.rs
crates/canon-engine/tests/: review_evaluator_tests.rs  test_observability_design.rs  test_policy_report.rs
(+1370 files in other folders)
