[package]
name = "canon-workspace"
edition.workspace = true
license.workspace = true
publish = false
rust-version.workspace = true
version.workspace = true

[lib]
test = false

[workspace]
members = [
    "crates/canon-cli",
    "crates/canon-engine",
    "crates/canon-adapters",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.95.0"
version = "0.21.0"

[workspace.dependencies]
assert_cmd = "2"
clap = { version = "4", features = ["derive"] }
insta = { version = "1", features = ["yaml"] }
predicates = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
strum = "0.27"
strum_macros = "0.27"
tempfile = "3"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["serde", "v7"] }

[dev-dependencies]
canon-adapters = { path = "crates/canon-adapters" }
canon-engine = { path = "crates/canon-engine" }
assert_cmd.workspace = true
predicates.workspace = true
serde_json.workspace = true
tempfile.workspace = true
time.workspace = true
toml.workspace = true
uuid.workspace = true
