[package]
name = "canon-cli"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "canon"
path = "src/main.rs"

[package.metadata.deb]
name = "canon"
maintainer = "Apply The"
copyright = "2026 Apply The"
license-file = ["../../LICENSE", "4"]
depends = "$auto"
extended-description = """\
Semantic governance runtime for AI-assisted engineering work."""
assets = [
    ["target/release/canon", "usr/bin/", "755"],
]

[dependencies]
canon-engine = { path = "../canon-engine" }
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
strum.workspace = true
strum_macros.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
time.workspace = true
toml.workspace = true
